docs: can see logs on :8080/docs/index.html
