# docs/swagger.json
@@ -3,11 +3,17 @@
     "info": {
         "description": "API documentation for the Blog Platform.",
         "title": "Blog Platform API",
-        "contact": {},
+        "contact": {
+            "name": "Syed",
+            "url": "https://www.linkedin.com/in/syed-vasil/",
+            "email": "syedvasil@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
         "version": "1.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
     "paths": {
         "/posts": {
             "get": {
